# scs-sdk-plugin

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
scs-telemetry/: scs-telemetry.def
scs-telemetry/inc/: log.hpp  scs-telemetry-common.hpp  scs_config_handlers.hpp  scs_gameplay_event_handlers.hpp  sharedmemory.hpp
scs-telemetry/src/: log.cpp  scs_config_handlers.cpp  scs_gameplay_event_handlers.cpp  scs_telemetry.cpp  sharedmemory.cpp
